# gitlab-mcp-server

./: .gitignore  =64  BINARY_README.md  Dockerfile  Dockerfile.ubuntu20.04  INSTALL.md  INSTALLATION_SUMMARY.md  INSTALL_BINARY.md  MANIFEST.in  README.md  build-docker.sh  build-simple.sh  build-ubuntu20.04-docker.sh  build.sh  build_binary.sh  demo.py  install-oneclick.sh  install.html  install.py  install.sh  mcp-binary.json  mcp-manifest.json  mcp-ubuntu.json  mcp.json  mcp_server.py  package.json  pyproject.toml  requirements-ubuntu20.txt  requirements.txt  server.js  setup.py  setup.sh  test-server.js  test_binary_package.py  test_diff_parsing.py  test_mcp_server.py  test_python38_compatibility.py  test_requirements.py  test_wheel.py  version.py
.github/: copilot-instructions.md
.github/workflows/: build-and-publish.yml  build-binaries.yml  build.yml  release.yml
gitlab_mcp_server/: __init__.py  __main__.py  server.py
src/gitlab_mcp_server/: __init__.py  mcp_server.c  mcp_server.py  test_mcp_server.c  test_mcp_server.py
test_venv/: pyvenv.cfg
