[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-mcp-server"
version = "0.1.1"
description = "A Model Context Protocol (MCP) server for fetching GitLab merge request diffs from private GitLab instances"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GitLab MCP Server", email = "noreply@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
]
requires-python = ">=3.8"
dependencies = [
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.2",
    "idna>=3.10",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
]

[project.scripts]
gitlab-mcp-server = "gitlab_mcp_server.mcp_server:main"

[project.urls]
Homepage = "https://github.com/Danielsuri/gitlab-mcp-server"
Repository = "https://github.com/Danielsuri/gitlab-mcp-server"
Issues = "https://github.com/Danielsuri/gitlab-mcp-server/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.so"]